More html added.

--- a/Uppgift_1/pages/omkakao.html
+++ b/Uppgift_1/pages/omkakao.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../stil/style.css">
-    <title>Chokladprovning</title>
+    <title>Om kakaoträdet</title>
 </head>
 <body>
     <!-- This is the start of the section at the top on every page -->
@@ -13,9 +13,9 @@
     <table cellspacing="45"> 
         <tr>
             <td><a href="../index.html">HEM</a></td>
-            <td><a href="#">CHOKLADPROVNING</a></td>
+            <td><a href="./chokladprovning.html">CHOKLADPROVNING</a></td>
             <td><a href="./bokning.html">BOKNING</a></td>
-            <td><a href="./omkakao.html">OM KAKAOTRÄDET</a></td>
+            <td><a href="#">OM KAKAOTRÄDET</a></td>
         </tr>
     </table>
     <h1>Café Choco-Latte</h1>
