--- a/Uppgift_1/index.html
+++ b/Uppgift_1/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stil/style.css"
+    <link rel="stylesheet" href="stil/style.css">
     <title>Café Choco-Latte</title>
 </head>
+
 <body>
-    
+    <!-- This is the start of the section at the top on every page -->
+    <headerCafé Choco-Latte></header>
+    <table cellspacing="45"> 
+        <tr>
+            <td><a href="#">HEM</a></td>
+            <td><a href="pages/chokladprovning.html">CHOKLADPROVNING</a></td>
+            <td><a href="pages/bokning.html">BOKNING</a></td>
+            <td><a href="pages/omkakao.html">OM KAKAOTRÄDET</a></td>
+        </tr>
+    </table>
+    <h1>Café Choco-Latte</h1>
+    <h2>Fantastiskt kaffe & läckra bakverk</h2>
+    <p>Vi vill vara en kaffeoas där du känner de intensiva dofterna från kaffet 
+        när du kliver in genom dörren. Vi är en plats där du för varje kopp kaffe 
+        och bakverk ska uppleva en sann njutning och smaksensation.
+         Vi vill ge dig hög kvalitet utan att tumma på rättvisan gentemot kaffe- och kakoodlarna.</p>
+    <!-- This is the end of the section at the top on every page -->
+
+    <h3>Fantastiskt kaffe</h3>
+    <p>Intensiva dofter, fylliga smaker och oavsett rostning och tillredning 
+        finns kaffe för alla smaker. Vårt kaffe är fantastiskt!</p>
+    <p><a href="#">Kaffemeny</a></p>
+
+    <h3>Läckra bakverk</h3>
+    <p>Choklad av hög kvalitet i varje bakverk. Mäktiga och smakrika. Himmelriket för chokladälskaren!</p>
+    <p><a href="#">Chokladmeny</a></p>
+
+    <h3>Här hittar du oss</h3>
+    <p>Du hittar oss på en bakgata i närheten av Kungsparken. Kolla in kartan och gör ett besök.</p>
+    <p><a href="#">Karta</a></p>
+
+    <hr>
+
+    <h3>Nyheter</h3>
+    <h4>Chokladprovning - 25 april</h4>
+    <p>Boka in dig själv, kollegorna, kompisarna till en kväll där vi testar choklad av olika 
+        kakobönor och pratar historia kring chokladen.</p>
+    <p><a href="pages/chokladprovning.html">Läs mer om chokladprovning</a></p>
+
+    <h4>Ny kaffesmak - 22 april</h4>
+    <p>Vi testar hela tiden nya rostningar och smaksättningar. Denna dag är det premiär för 
+        vår nya smak Romerska bågar.</p>
+    <p><a href="#">Läs mer om kaffesmaker</a></p>
+    <footer><br><hr>&copy; Copyright 2022 | Café Choco-Latte</footer>
 </body>
 </html>
