Pictures and html added on pages.

--- a/Uppgift_1/index.html
+++ b/Uppgift_1/index.html
@@ -28,15 +28,19 @@
     <!-- This is the end of the section at the top on every page -->
 
     <h3>Fantastiskt kaffe</h3>
+    <img src="./Material HTML/bilder/cols-img.png" alt="Rykande kaffekopp" width="76" height="80">
     <p>Intensiva dofter, fylliga smaker och oavsett rostning och tillredning 
         finns kaffe för alla smaker. Vårt kaffe är fantastiskt!</p>
     <p><a href="#">Kaffemeny</a></p>
+    
 
     <h3>Läckra bakverk</h3>
+    <img src="./Material HTML/bilder/cols-img2.png" alt="Supergod muffins" width="76" height="80">
     <p>Choklad av hög kvalitet i varje bakverk. Mäktiga och smakrika. Himmelriket för chokladälskaren!</p>
     <p><a href="#">Chokladmeny</a></p>
 
     <h3>Här hittar du oss</h3>
+    <img src="./Material HTML/bilder/cols-img3.png" alt="Penna och linjal för att rita vägen" width="76" height="80">
     <p>Du hittar oss på en bakgata i närheten av Kungsparken. Kolla in kartan och gör ett besök.</p>
     <p><a href="#">Karta</a></p>
 
