Ready for submission.

--- a/Uppgift_1/index.html
+++ b/Uppgift_1/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stil/style.css">
+    <link rel="stylesheet" href="style/style.css">
+    <style>
+        table {
+            border-spacing: 45px;
+        }
+    </style>
     <title>Café Choco-Latte</title>
 </head>
 
 <body>
     <!-- This is the start of the section at the top on every page -->
-    <headerCafé Choco-Latte></header>
-    <table cellspacing="45"> 
+    <table>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
         <tr>
             <td><a href="#">HEM</a></td>
             <td><a href="pages/chokladprovning.html">CHOKLADPROVNING</a></td>
@@ -28,19 +38,19 @@
     <!-- This is the end of the section at the top on every page -->
 
     <h3>Fantastiskt kaffe</h3>
-    <img src="./Material HTML/bilder/cols-img.png" alt="Rykande kaffekopp" width="76" height="80">
+    <img src="./images/cols-img.png" alt="Rykande kaffekopp" width="76" height="80">
     <p>Intensiva dofter, fylliga smaker och oavsett rostning och tillredning 
         finns kaffe för alla smaker. Vårt kaffe är fantastiskt!</p>
     <p><a href="#">Kaffemeny</a></p>
     
 
     <h3>Läckra bakverk</h3>
-    <img src="./Material HTML/bilder/cols-img2.png" alt="Supergod muffins" width="76" height="80">
+    <img src="./images/cols-img2.png" alt="Supergoda muffins" width="76" height="80">
     <p>Choklad av hög kvalitet i varje bakverk. Mäktiga och smakrika. Himmelriket för chokladälskaren!</p>
     <p><a href="#">Chokladmeny</a></p>
 
     <h3>Här hittar du oss</h3>
-    <img src="./Material HTML/bilder/cols-img3.png" alt="Penna och linjal för att rita vägen" width="76" height="80">
+    <img src="./images/cols-img3.png" alt="Penna och linjal för att rita vägen" width="76" height="80">
     <p>Du hittar oss på en bakgata i närheten av Kungsparken. Kolla in kartan och gör ett besök.</p>
     <p><a href="#">Karta</a></p>
 
