--- a/Uppgift_1/pages/chokladprovning.html
+++ b/Uppgift_1/pages/chokladprovning.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../stil/style.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <style>
+        table {
+            border-spacing: 45px;
+        }
+    </style>
     <title>Chokladprovning</title>
 </head>
 <body>
     <!-- This is the start of the section at the top on every page -->
-    <headerCafé Choco-Latte></header>
-    <table cellspacing="45"> 
+    <table>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
         <tr>
             <td><a href="../index.html">HEM</a></td>
             <td><a href="#">CHOKLADPROVNING</a></td>
@@ -55,11 +65,11 @@
     <p>Chokladprovningen sker kvällstid måndag och onsdagar mellan kl. 19 och 21.<br>
     Max antal på varje provning är 12 stycken personer.<br>
     Pris per person är 525 kr</p>
-    <table cellspacing="45"> 
+    <table> 
         <tr>
-            <td><img src="../Material HTML/bilder/chocolate-heart.jpg" alt="Rykande kaffekopp" width="300" height="200"></td>
-            <td><img src="../Material HTML/bilder/chokladpraliner.jpg" alt="Rykande kaffekopp" width="300" height="200"></td>
-            <td><img src="../Material HTML/bilder/chocolate.jpg" alt="Rykande kaffekopp" width="300" height="200"></td>
+            <td><img src="../images/chocolate-heart.jpg" alt="Hjärtformade chokladpraliner" width="300" height="200"></td>
+            <td><img src="../images/chokladpraliner.jpg" alt="Chokladpraliner" width="300" height="200"></td>
+            <td><img src="../images/chocolate.jpg" alt="Bitar av ljus och mörk choklad" width="300" height="200"></td>
         </tr>
     </table>
     <footer><br><hr>&copy; Copyright 2022 | Café Choco-Latte</footer>
