--- a/Uppgift_1/pages/omkakao.html
+++ b/Uppgift_1/pages/omkakao.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../stil/style.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <style>
+        table {
+            border-spacing: 45px;
+        }
+    </style>
     <title>Om kakaoträdet</title>
 </head>
 <body>
     <!-- This is the start of the section at the top on every page -->
-    <headerCafé Choco-Latte></header>
-    <table cellspacing="45"> 
+    <table>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
         <tr>
             <td><a href="../index.html">HEM</a></td>
             <td><a href="./chokladprovning.html">CHOKLADPROVNING</a></td>
